--- a/systemquchooch.csproj
+++ b/systemquchooch.csproj
@@ -13,6 +13,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.13" />
+    <PackageReference Include="Twitter.Bootstrap.MVC" Version="2.1.6" />
   </ItemGroup>
 
   <ItemGroup>
